# openreview-mcp-server

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/openreview_mcp_server/: __init__.py  __main__.py  client.py  config.py  server.py
src/openreview_mcp_server/tools/: __init__.py  export_papers.py  get_conference_papers.py  get_user_papers.py  search_papers.py  search_user.py
tests/: test_client.py  test_tools.py
